@@ -22,11 +22,11 @@ TEST=
 APPS=
 
 LIB=$(TOP)/libcrypto.a
-LIBSRC= ocsp_asn.c ocsp_ext.c ocsp_ht.c \
-	ocsp_lib.c ocsp_cl.c ocsp_prn.c ocsp_err.c
+LIBSRC= ocsp_asn.c ocsp_ext.c ocsp_ht.c ocsp_lib.c ocsp_cl.c \
+	ocsp_prn.c ocsp_vfy.c ocsp_err.c
 
-LIBOBJ= ocsp_asn.o ocsp_ext.o ocsp_ht.o \
-	ocsp_lib.o ocsp_cl.o ocsp_prn.o ocsp_err.o
+LIBOBJ= ocsp_asn.o ocsp_ext.o ocsp_ht.o ocsp_lib.o ocsp_cl.o \
+	ocsp_prn.o ocsp_vfy.o ocsp_err.o
 
 SRC= $(LIBSRC)
 
